2005-12-10  Edward Hervey  <edward@fluendo.com>

	reviewed by: <delete if not using a buddy>

	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_reset), (gnl_composition_sync_handler),
	(have_to_update_pipeline), (get_new_seek_event),
	(handle_seek_event), (gnl_composition_event_handler),
	(gnl_composition_ghost_pad_set_target), (objects_start_compare),
	(objects_stop_compare), (no_more_pads_object_cb),
	(compare_relink_stack), (update_pipeline),
	(gnl_composition_add_object):
	Implement better event handling and fix memory leaks.
	* gnl/gnlfilesource.c: (gnl_filesource_prepare):
	* gnl/gnlobject.c: (gnl_object_to_media_time),
	(gnl_media_to_object_time), (translate_incoming_seek),
	(translate_outgoing_seek), (translate_outgoing_new_segment),
	(internalpad_event_function), (internalpad_query_function),
	(internalpad_unlink_function), (ghostpad_event_function),
	(control_internal_pad), (ghostpad_unlink_function),
	(gnl_object_ghost_pad_set_target):
	Implement better event handling

2005-12-08  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c: (pad_blocked_cb):
	Do this hack from another thread.

2005-12-02  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Preparation for oh ten oh

2005-12-01  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_sync_handler),
	(objects_start_compare), (objects_stop_compare),
	(update_start_stop_duration), (update_pipeline),
	(object_start_changed), (object_stop_changed),
	(gnl_composition_add_object):
	Wow, that was some stupid error :)
	* gnl/gnlobject.c: (translate_incoming_seek),
	(internalpad_event_function), (flush_hack_check),
	(ghostpad_event_function), (control_internal_pad),
	(gnl_object_ghost_pad_full), (gnl_object_ghost_pad_no_target):
	Better flush handling.

2005-11-26  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_put_sync_handler),
	(gnl_composition_ghost_pad_set_target):
	* gnl/gnlobject.c: (gnl_object_put_sync_handler),